Scroll Release Notes
====================
A list of what has changed in Scroll releases.
==============================================

99.2.0 7/01/2024
================
🎉 added changes.parsers
🎉 Scrollsets now supports defining concept delimiters other than `id`

99.1.0 7/01/2024
================
🎉 added `limit` parser to snippets

99.0.0 6/30/2024
================
⚠️ BREAKING: I moved `wws` to its own repo

98.0.2 6/30/2024
================
🏥 another missing file in package fix

98.0.1 6/29/2024
================
🏥 fix bug #115 in `wws`. Thank you Nick Noble!
 https://github.com/breck7/scroll/issues/115
 https://github.com/nickisnoble

98.0.0 6/26/2024
================
⚠️ BREAKING: `writeText` is now `buildText`
⚠️ BREAKING: `writeConcepts` is now `buildConcepts`
⚠️ BREAKING: `writeMeasures` is now `buildMeasures`
⚠️ BREAKING: (no one should be affected), `buildFilesInFolder` now returns an object of all built files.

97.4.0 6/25/2024
================
🎉 added `scatterplot` can now take a url as a data source

97.3.1 6/24/2024
================
🏥 bug fix

97.3.0 6/24/2024
================
🎉 added `scatterplot` parser

97.2.0 6/23/2024
================
🎉 added `stamp` mini language

97.1.1 6/21/2024
================
🏥 test fix

97.1.0 6/21/2024
================
🎉 added `sparkline` parser using beautiful tiny sparkline library by Marius Gundersen.
 https://github.com/mariusGundersen/sparkline
 https://mariusgundersen.net/

97.0.0 6/19/2024
================
🎉 BREAKING: upgraded scrollSDK to get `grammar` to `parsers` change.

96.0.0 6/18/2024
================
🎉 Instead of `grammar` it's just `parsers`.
⚠️ BREAKING: (no one should be affected) files previously ending in `.grammar` now end in `.parsers`.

95.2.0 6/16/2024
================
🎉 added `formatAndSave` method.

95.1.0 6/14/2024
================
🎉 added `wws` command line app.

95.0.0 6/11/2024
================
🎉 added `downloadUrl` parser.
⚠️ BREAKING: `canonicalLink` is now `canonicalUrl`.