@@ -4,7 +4,7 @@
  <title></title>
  <link>https://scroll.pub/blog/</link>
  <description>Official blog for Scroll</description>
- <lastBuildDate>Mon, 01 Jul 2024 15:07:50 +0000</lastBuildDate>
+ <lastBuildDate>Mon, 01 Jul 2024 15:14:41 +0000</lastBuildDate>
  <language>en-us</language>
  <item>
   <title>Changes: A Mini-Language for Change Logs</title>
