@@ -382,6 +382,10 @@ document.addEventListener("DOMContentLoaded", () => document.querySelectorAll(".
 <div class="scrollSection"><h1 class="scrollTitle"><a href="releaseNotes.html">Scroll Release Notes</a></h1>
 <div class="scrollSection"><h2 class="scrollParagraph">A list of what has changed in Scroll releases.</h2>
 </div></div>
+<div class="scrollColumns" style="column-width:35ch;column-count:1;max-width:35ch;">
+<p class="scrollParagraph">Download as <a href="releaseNotes.csv">CSV</a> | <a href="releaseNotes.tsv">TSV</a> | <a href="releaseNotes.json">JSON</a></p>
+</div>
+<br>
 <div class="scrollColumns" style="column-width:35ch;column-count:10;max-width:530ch;">
 <div class="scrollSection"><h1 class="scrollParagraph">99.2.0 7/01/2024</h1>
 <ul class="newFeatureParser"><style>
