@@ -3,6 +3,11 @@ Scroll Release Notes
 A list of what has changed in Scroll releases.
 ==============================================
 
+Download as CSV | TSV | JSON
+ https://scroll.pub/releaseNotes.csv
+ https://scroll.pub/releaseNotes.tsv
+ https://scroll.pub/releaseNotes.json
+
 99.2.0 7/01/2024
 ================
 🎉 added changes.parsers
